# TUMExam-Scripts

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  README.md  pyproject.toml
tests/: test_send_all.py
tum_exam_scripts/: main.py  pdf_commands.py  pdf_utils.py  shared.py  utils.py
tum_exam_scripts/utils/: password_handling.py  website.py
