[tool.poetry]
name = "tum-exam-scripts"
version = "0.1.0"
description = ""
authors = ["Patrick Stöckle <patrick.stoeckle@tum.de>"]
maintainers = ["Patrick Stöckle <patrick.stoeckle@tum.de>"]
readme = "README.md"
repository = "git@gitlab.lrz.de:i4/software/tum-exam-scripts.git"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
typer = "^0.4.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tum-exam-scripts = 'tum_exam_scripts.main:app'
